# Parallel-Linear-Algebra

./: .gitignore  README.md
CANNON-MPI/: analysis.ipynb  main.c
CANNON-MPI/Performance/2048/: 1
CG-CUDA/: Base.h  analysis.ipynb  main.cu
CG-CUDA/iterative/: Timer.h  VectorOperations.h  main.cpp
CG-CUDA/parallel/: GpuTimer.cuh  VectorOperations.cuh  main.cu
CG-CUDA/parallel/Performance/Threads_16/: 1024  2048  4096  512
CG-CUDA/parallel/Performance/Threads_32/: 2048  4096  512
CG-CUDA/parallel/Performance/Threads_64/: 1024  2048  4096  512
GEMV-MPI/: CMakeLists.txt  README.md  common.cpp  common.h  gemv_block.cpp  gemv_cols.cpp  gemv_rows.cpp  run.sh
